--- a/sections/custom-collection.liquid
+++ b/sections/custom-collection.liquid
@@ -91,6 +91,14 @@
     padding: 5px;
   }
 
+  @media screen and (max-width:480px){
+
+    .dicountrate__customize {
+      font-size: 3vw;
+      padding: 6px;
+    }
+  }
+
   .product_flex{
     display: flex!important;
     flex-direction: column!important;
