--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -110,6 +110,14 @@
       border-radius: 50px;
       padding: 5px;
     }
+    
+    @media screen and (max-width:480px){
+
+      .dicountrate__customize {
+        font-size: 3vw;
+        padding: 6px;
+      }
+    }
   
     .product_flex{
       display: flex!important;
