--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -1,6 +1,6 @@
 
   <footer>
     <div class="footer__inner">
-      <p class="copy">©️ 2022 Super-Liquid-Course Co., Ltd</p>
+      <p class="copy">©️ Urban Birds Co., Ltd</p>
     </div>
   </footer>
